2002-01-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-data-wrapper.c (g_mime_data_wrapper_write_to_stream):
	Handle the x-uuencode encoding type.

	* gmime-utils.c (g_mime_utils_uuencode_close): No longer needs a
	uulen argument since it is now compacted into the state argument.
	(g_mime_utils_uuencode_step): Same here.

	* gmime-filter-basic.c (filter_filter): Ignore data until we have
	found the "begin" line. Also, we no longer need uulen.
	(filter_complete): Same.

	* gmime-part.c (g_mime_part_encoding_to_string): Handle x-uuencode.
	(g_mime_part_encoding_from_string): Same.
	(g_mime_part_set_pre_encoded_content): Here too.
	(write_content): And again here.

2002-01-19  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv.c (iconv_node_new): Return the node - how did I miss
	this!?

2002-01-18  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Fixed more silliness.

	* acconfig.h: Added #undef's for some iconv stuff.

	* gmime-filter-charset.c (g_mime_filter_charset_new): Put the
	charset aruments in the right order.

	* gmime-iconv.c (g_mime_iconv_open): Swap the to/from arguments so
	that they are in the same order as iconv_open.

	* gmime-iconv-utils.c (iconv_utils_init): Put the to/from
	arguments in the right order.

2002-01-17  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv-utils.c (g_mime_iconv_strndup): If we get an EILSEQ,
	just return NULL rather than g_strndup'ing the original
	string. We'd rather get back NULL and know it failed than get back
	a string thinking everything went okay.

	* configure.in: Fixed some silliness, thanks to Charles Schmidt.

2002-01-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv-utils.c (g_mime_iconv_strndup): New utility function
	to iconv n bytes of a string and return a buffer containing the
	converted string.
	(g_mime_iconv_strdup): Same but for the whole string.
	(g_mime_iconv_locale_to_utf8): Converts a string in the locale
	charset to utf8.